--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ramda": "^0.22.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "redux": "^3.6.0",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   },
